css/style.css
/* set default colors variables */
:root {
    --primary-color: #331436;
    --secondary-color: #7A1745;
    --button-color: #CB4F57;
    --primary-font-color: #FFF;
    --secondary-font-color: #FCF4B6;
}

/* reset margin and padding for all elemens*/
*{
    margin: 0;
    padding: 0;
    font-family: "Roboto", sans-serif;
    line-height: 24px;
    font-weight: 400;

}

#main-header{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: auto;
    height: 80px;
    color: var(--primary-font-color);
    background-color: var(--primary-color);
    padding: 0 20px 0 20px ;
}

.brand {
    display: flex;
    max-width: 350px;
}

.brand img {
    width: 50px;
    height: 50px;
    margin-right: 20px;
}

.brand h1 {
    display: flex;
    align-items: center;
    font-weight: 100;
}

/* components section start */

button{
    width: 240px;
    height: 48px;
    border-radius: 8px;
    border: 0;
    font-size: 16px;
    font-weight: 500;
    color: var(--secondary-font-color);
    font-size: 16px;
    background-color: var(--button-color);
}

.dark-button {
    background-color: var(--primary-color);
    color: var(--primary-font-color);
}

.card-list{
    width: 1100px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.section-container{
    width: 1100px;
}
/* components section end*/

/* #main-section css section start*/
#main-section {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    padding: 30px;
    background-color: var(--secondary-color);
}

#main-section .container.welcome{
    width: 500px;
    height: 216px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: var(--primary-font-color);
}

#main-section .container.welcome h1 {
    display: flex;
    justify-content: center;
    flex-wrap: nowrap;
    width: 520px;
    margin-bottom: 24px;
    font-weight: 700;
    font-style: normal;
    font-size: 40px;
    line-height: 48px;
}

#main-section .container.welcome p {
    margin-bottom: 24px;
    font-size: 16px;
}

#main-section .container figure img{
    width: 540px;
    height: 436px;
    overflow: hidden;
}

/* #main-section css section end*/

/* #section-2 css section start*/

#section-2{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 60px;
}

#section-2 .container{
    width: 1100px;
    margin-bottom: 60px;
}

#section-2 .container h2{
    font-weight: 700;
    font-size: 40px;
}

#section-2 .container p{
    margin: 24px 0 24px 0;
    font-size: 16px;
}

#section-2 .container.cards{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#section-2 .container.cards .card{
    width: 340px;
    height: 420px;
}

#section-2 .container.cards .card h3{
    font-size: 16px;
}

#section-2 .container.cards .card p{
    font-size: 16px;
    line-height: 24px;
    font-weight: 500;
    margin: 0;
}
/* #section-2 css section end*/

/* #featured-tools-section css section start*/

#featured-tools-section{
    width: 100%;
    padding-top: 60px;
    display: flex;
    justify-content: center;
    background-color: #FCF4B680;
    
}

#featured-tools-section .section-container .container{
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    margin-bottom: 60px;
}

#featured-tools-section .section-container .container h1{
    font-size: 40px;
    line-height: 48px;
    font-weight: 700;
    margin-bottom: 24px;
    color: var(--primary-color)
}

#featured-tools-section .section-container .container p{
    font-size: 16px;
    line-height: 24px;
    margin-bottom: 24px;
}

#featured-tools-section .section-container .card-list{
    margin-bottom: 60px;
}

#featured-tools-section .section-container .card-list .card{
    width: 245px;
    height: 204px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

#featured-tools-section .section-container .card-list .card figure {
    width: 100px;
    height: 100px;
    background-color: var(--primary-color);
    border-radius: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#featured-tools-section .section-container .card-list .card h3 {
    font-size: 20px;
    line-height: 28px;
}

/* #featured-tools-section css section end*/

#main-footer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 220px;
    background-color: var(--primary-color);
}

#main-footer .container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    width: 786px;
}

#main-footer .container p {
    color: var(--primary-font-color);
    font-size: 20;
}

#main-footer .social-icons {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 136px;
}

#main-footer .social-icons a {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 34px;
    height: 34px;
    border-radius: 25px;
    background-color: var(--primary-font-color);
}

